version/stable/_sources/api/ansys/mechanical/stubs/v251/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/OperationType.rst.txt
.. vale off



:class:`OperationType`
======================

.. py:class:: ansys.mechanical.stubs.v251.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OperationType(*args, **kwds)

   Bases: :py:obj:`enum.Enum`


   
   This enum is referenced in the “Step” tree node and reflects the type of operation being configured. Based on the type of an operation different rules are applied which define the applicable list of controls and outcomes which can be added.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: OperationType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AddPrescribedPoints`
            - 
          * - :py:attr:`~AutoQuadConvertToAllQuad`
            - 
          * - :py:attr:`~AutoQuadDefeature`
            - 
          * - :py:attr:`~AutoQuadMesher`
            - 
          * - :py:attr:`~AutoQuadRepair`
            - 
          * - :py:attr:`~AutoQuadTreatHolesAndFeatures`
            - 
          * - :py:attr:`~AutoRepairTopology`
            - 
          * - :py:attr:`~Checkpoint`
            - 
          * - :py:attr:`~Connect`
            - 
          * - :py:attr:`~CreateEnclosure`
            - 
          * - :py:attr:`~CreateLabels`
            - 
          * - :py:attr:`~CreateSurfaceMesh`
            - 
          * - :py:attr:`~CreateTopology`
            - 
          * - :py:attr:`~CreateVolumeMesh`
            - 
          * - :py:attr:`~CreateVolumetricSizeField`
            - 
          * - :py:attr:`~CreateZones`
            - 
          * - :py:attr:`~Custom`
            - 
          * - :py:attr:`~DecomposeTopology`
            - 
          * - :py:attr:`~Delete`
            - 
          * - :py:attr:`~DeleteTopology`
            - 
          * - :py:attr:`~DetectHoles`
            - 
          * - :py:attr:`~DetectStackableBodies`
            - 
          * - :py:attr:`~ExportMesh`
            - 
          * - :py:attr:`~Extrude`
            - 
          * - :py:attr:`~FillHoles`
            - 
          * - :py:attr:`~Fuse`
            - 
          * - :py:attr:`~GenerateGrains`
            - 
          * - :py:attr:`~IGAConvertToSpline`
            - 
          * - :py:attr:`~IGAExportSolverFile`
            - 
          * - :py:attr:`~ImportCAD`
            - 
          * - :py:attr:`~ImportMesh`
            - 
          * - :py:attr:`~ImproveSurfaceMesh`
            - 
          * - :py:attr:`~ImproveVolumeMesh`
            - 
          * - :py:attr:`~Interactive`
            - 
          * - :py:attr:`~LoadRecording`
            - 
          * - :py:attr:`~ManageZoneProperties`
            - 
          * - :py:attr:`~Match`
            - 
          * - :py:attr:`~MergeNodes`
            - 
          * - :py:attr:`~MergeOverlappingFaces`
            - 
          * - :py:attr:`~MergeParts`
            - 
          * - :py:attr:`~MergeVolumes`
            - 
          * - :py:attr:`~MeshCopy`
            - 
          * - :py:attr:`~ModelDiagnostics`
            - 
          * - :py:attr:`~ModifySurfaceOrientations`
            - 
          * - :py:attr:`~ModifyZones`
            - 
          * - :py:attr:`~Morph`
            - 
          * - :py:attr:`~MorphPlayback`
            - 
          * - :py:attr:`~MultiZoneSurfaceMesher`
            - 
          * - :py:attr:`~MultiZoneVolumeMesher`
            - 
          * - :py:attr:`~PatchHoles`
            - 
          * - :py:attr:`~Python`
            - 
          * - :py:attr:`~RepairTopology`
            - 
          * - :py:attr:`~SALEGenerateMesh`
            - 
          * - :py:attr:`~SaveRecording`
            - 
          * - :py:attr:`~SetupEnvironment`
            - 
          * - :py:attr:`~StackerCreateBaseFace`
            - 
          * - :py:attr:`~StackerDiagnostics`
            - 
          * - :py:attr:`~StackerStackBaseFace`
            - 
          * - :py:attr:`~Undefined`
            - 
          * - :py:attr:`~Verticalize`
            - 
          * - :py:attr:`~Wrap`
            - 








Attribute detail
----------------
.. py:attribute:: AddPrescribedPoints
   :value: 32


.. py:attribute:: AutoQuadConvertToAllQuad
   :value: 58


.. py:attribute:: AutoQuadDefeature
   :value: 56


.. py:attribute:: AutoQuadMesher
   :value: 57


.. py:attribute:: AutoQuadRepair
   :value: 55


.. py:attribute:: AutoQuadTreatHolesAndFeatures
   :value: 54


.. py:attribute:: AutoRepairTopology
   :value: 47


.. py:attribute:: Checkpoint
   :value: 2


.. py:attribute:: Connect
   :value: 41


.. py:attribute:: CreateEnclosure
   :value: 7


.. py:attribute:: CreateLabels
   :value: 52


.. py:attribute:: CreateSurfaceMesh
   :value: 25


.. py:attribute:: CreateTopology
   :value: 9


.. py:attribute:: CreateVolumeMesh
   :value: 26


.. py:attribute:: CreateVolumetricSizeField
   :value: 11


.. py:attribute:: CreateZones
   :value: 16


.. py:attribute:: Custom
   :value: 1


.. py:attribute:: DecomposeTopology
   :value: 53


.. py:attribute:: Delete
   :value: 6


.. py:attribute:: DeleteTopology
   :value: 10


.. py:attribute:: DetectHoles
   :value: 48


.. py:attribute:: DetectStackableBodies
   :value: 37


.. py:attribute:: ExportMesh
   :value: 5


.. py:attribute:: Extrude
   :value: 12


.. py:attribute:: FillHoles
   :value: 13


.. py:attribute:: Fuse
   :value: 42


.. py:attribute:: GenerateGrains
   :value: 19


.. py:attribute:: IGAConvertToSpline
   :value: 59


.. py:attribute:: IGAExportSolverFile
   :value: 60


.. py:attribute:: ImportCAD
   :value: 40


.. py:attribute:: ImportMesh
   :value: 4


.. py:attribute:: ImproveSurfaceMesh
   :value: 29


.. py:attribute:: ImproveVolumeMesh
   :value: 30


.. py:attribute:: Interactive
   :value: 44


.. py:attribute:: LoadRecording
   :value: 22


.. py:attribute:: ManageZoneProperties
   :value: 8


.. py:attribute:: Match
   :value: 21


.. py:attribute:: MergeNodes
   :value: 49


.. py:attribute:: MergeOverlappingFaces
   :value: 43


.. py:attribute:: MergeParts
   :value: 45


.. py:attribute:: MergeVolumes
   :value: 15


.. py:attribute:: MeshCopy
   :value: 31


.. py:attribute:: ModelDiagnostics
   :value: 51


.. py:attribute:: ModifySurfaceOrientations
   :value: 18


.. py:attribute:: ModifyZones
   :value: 17


.. py:attribute:: Morph
   :value: 20


.. py:attribute:: MorphPlayback
   :value: 24


.. py:attribute:: MultiZoneSurfaceMesher
   :value: 27


.. py:attribute:: MultiZoneVolumeMesher
   :value: 28


.. py:attribute:: PatchHoles
   :value: 14


.. py:attribute:: Python
   :value: 34


.. py:attribute:: RepairTopology
   :value: 46


.. py:attribute:: SALEGenerateMesh
   :value: 50


.. py:attribute:: SaveRecording
   :value: 23


.. py:attribute:: SetupEnvironment
   :value: 3


.. py:attribute:: StackerCreateBaseFace
   :value: 35


.. py:attribute:: StackerDiagnostics
   :value: 38


.. py:attribute:: StackerStackBaseFace
   :value: 36


.. py:attribute:: Undefined
   :value: 0


.. py:attribute:: Verticalize
   :value: 39


.. py:attribute:: Wrap
   :value: 33






.. vale on